--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,11 @@ BODY {
   padding: 0 40px;
   font-family: Helvetica, Tahoma, sans-serif;
   font-size: 20px;
-  line-height: 2.85;
+  line-height: 1.6;
 }
 
 H1 {
-  margin-bottom: 0;
+  margin: 30px 0;
 }
 
 OL {
@@ -15,6 +15,7 @@ OL {
   margin: 0;
   padding: 0;
   list-style: none;
+  line-height: 2.85;
 }
 
 LI {
@@ -22,11 +23,18 @@ LI {
   background-size: 100% 100%;
 }
 
+LABEL {
+  white-space: nowrap;
+}
+
 .header {
-  margin-bottom: 1em;
+  margin-bottom: 30px;
 }
 
 @media print {
+  BODY {
+    padding: 0 20px;
+  }
   .header {
     display: none;
   }
@@ -35,10 +43,11 @@ LI {
 .controls {
   display: flex;
   flex-wrap: wrap;
-  gap: 3em;
+  gap: 1em 3em;
 }
 
 .controls__group {
   display: flex;
-  gap: 1em;
+  flex-wrap: wrap;
+  gap: .5em 1em;
 }
