--- a/styles.css
+++ b/styles.css
@@ -17,12 +17,8 @@ OL {
   display: grid;
   gap: 0 1em;
   grid-template-columns: repeat(3, 1fr);
-}
-
-@media (max-width: 600px) {
-  OL {
-    grid-template-columns: repeat(2, 1fr);
-  }
+  grid-template-rows: repeat(var(--rows), 1fr);
+  grid-auto-flow: column;
 }
 
 LI {
