--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,10 @@ H1 {
 }
 
 OL {
+  position: relative;
   margin: 0;
   padding: 0;
+  padding-bottom: 40px;
   list-style: none;
   display: grid;
   gap: 0 1em;
@@ -29,6 +31,19 @@ OL {
   grid-template-rows: repeat(var(--rows), 1fr);
   grid-auto-flow: column;
   font-size: 20px;
+}
+
+OL:after {
+  position: absolute;
+  content: '';
+  display: grid;
+  place-content: center;
+  bottom: 10px;
+  left: 0;
+  right: 0;
+  height: 1px;
+  background-image: linear-gradient(to right, #CCC 10px, transparent 10px,transparent);
+  background-size: 20px 20px;
 }
 
 LI {
@@ -64,6 +79,11 @@ LABEL {
     width: 100%;
     max-height: 100%;
     page-break-after: always;
+    padding-bottom: 0;
+  }
+
+  OL:after {
+    content: none;
   }
 
   LI {
